# pptx2marp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish-pypi.yml
pptx2marp/: __init__.py  cli.py  converter.py  image_extractor.py  slide_processor.py  text_formatter.py  utils.py
scripts/: bump_version.py
